<resources>
    <string name="app_name">Sentry</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="history">History</string>
    <string name="logout">Log Out</string>

    <!--First Log In Welcome-->
    <string name="phrase_one">Meow</string>
    <string name="phrase_two">Meows</string>
    <string name="phrase_three">Meowss</string>
</resources>