<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gray_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/dash_menu"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:background="@drawable/dash_menu_bg"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/dash_menu_contents"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title_sentry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <View
            android:id="@+id/divider"
            android:layout_width="230dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_dashboard"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_menu_bg"
            app:backgroundTint="@null"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="@dimen/header_two" />

        <Button
            android:id="@+id/btn_products"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_menu_bg"
            app:backgroundTint="@null"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/products"
            android:textColor="@color/white"
            android:textSize="@dimen/header_two" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_menu_bg"
            app:backgroundTint="@null"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="@dimen/header_two" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_red_bg"
            app:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/header_two" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_toggle_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/title_top_margin"
        android:layout_marginStart="16dp"
        android:background="@drawable/cell_white_bg"
        android:src="@drawable/ic_menu"
        app:tint="@color/sidebar_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>